<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">Telpo_SDK</string>              
    
    <!--打印  -->
    <string name="print_test">打印测试</string>
    <string name="printer_version">打印机版本：</string>
    <string name="bar_code">条形码:</string>
    <string name="print_bar_code">条码打印</string>
    <string name="D_bar_code">二维码:</string>
    <string name="print_2D_barcode">二维码打印</string>
    <string name="walk_paper_lines">走纸行数:</string>
    <string name="walk_paper_test">走纸测试</string>
    <string name="left_margin">左边距:</string>
    <string name="right_margin">右边距</string>
    <string name="row_space">行距:</string>
    <string name="font_size">字体大小:</string>
    <string name="gray_level">灰度:</string>
    <string name="print_content">打印内容：</string>
    <string name="chinese_example">显示中文范例</string>
    <string name="english_example">显示英文范例</string>
    <string name="clear_text">清空文本</string>
    <string name="print_text">文字打印</string>
    <string name="printing_wait">打印中，请稍候……</string>
    <string name="D_barcode_loading">二维码加载</string>
    <string name="generate_barcode_wait">二维码生成中，请稍候……</string>
    <string name="input_print_data">请输入打印数据</string>
    <string name="maker_search_distance">寻找到黑标前的最大走纸长度:</string>
    <string name="maker_walk_distance">寻找到黑标后的走纸长度:</string>
    <string name="maker_walk_distance_range">(0-255)</string>
    <string name="maker">黑标检测</string>
    <string name="maker_error">黑标输入值不合法</string>
    <string name="maker_not_find">找不到黑标</string>
    <string name="papercut">切纸</string>
    <string name="walk_paper_intput_value">走纸输入值不合法</string>
    <string name="print_picture">图片打印</string>
    <string name="sure">确定</string>
    <string name="not_find_picture">找不到图片</string>
    <string name="input_command">请输入指令</string>
    <string name="execute_command">执行指令</string>
    <string name="watting">正在检测驱动版本，请稍候...</string>
    <string name="noPaper">打印缺纸</string>
    <string name="noPaperNotice">打印缺纸，请放入纸后重试</string>
    <string name="LowBattery">电池电量低，请连接充电器！</string>
    <string name="overTemp">打印过热！</string>
    <string name="ptintInit">打印机初始化中，请稍后再试</string>
    <string name="outOfLeft">超出左边距范围！</string>
    <string name="outOfLine">超出行距范围！</string>
    <string name="outOfFont">超出字体范围！</string>
    <string name="outOfGray">超出浓度范围！</string>
    <string name="outOfCharSpace">超出字符间距范围！</string>
    <string name="empty">内容为空！</string>
    <string name="lengthNotEnougth">长度不足！</string>   
    <string name="index_text">打印文本</string>
    <string name="index_pic">条码/图片</string>
    <string name="index_comm">打印指令</string>
    <string name="input_content">输入打印内容</string>
    <string name="dialog_comfirm">确定</string>
    <string name="operation_result">结果</string>
    <string name="bl_dy">打印</string>
    <string name="print_waring">提示：如果SDK提供的函数中不能满足您的打印需求，您可以通过发送打印指令的方式进行实现</string>
    <string name="char_space">字符间距:</string>
    <string name="printer_type_common">普通打印机</string>
    <string name="printer_type_usb">USB打印机</string>
    <string name="printer_type_select">选择打印机类型</string>
    
    <!-- 一二维码识别 -->
    <string name="qrcode_verify">二维码识别</string>
    
    <!-- 磁条卡 -->
    <string name="magnetic_card_test">磁条卡测试</string>
    <string name="track1">Track1</string>
    <string name="track2">Track2</string>
    <string name="track3">Track3</string>
    <string name="read_card">刷卡</string>
    <string name="quit">退出</string>
    <string name="error_open_magnetic_card">无法打开磁条卡设备</string>
    <string name="error">出错</string>
    
    <!-- RFID -->
    <string name="rfid_test">RFID测试</string>
    <string name="operation_fail">操作失败</string>
    <string name="init_card">开　　卡</string>
    <string name="query">查询余额</string>
    <string name="consume">消　　费</string>
    <string name="recharge">充 　　值</string>
    <string name="opening">正在连接读卡器</string>
    <string name="operating">操作中</string>
    <string name="operation_succss">操作成功</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="input_init_amount">"请输入初始化金额"</string>
    <string name="input_consume_amount">请输入消费金额</string>
    <string name="input_recharge_amount">"请输入充值金额"</string>
    <string name="balance">当前余额</string>
    <string name="no_enough_balance">余额不足</string>
    <string name="input_amount">请输入金额</string>
    <string name="cpu_card_test">CPU卡测试</string>
    <string name="check_version">正在获取打印机驱动版本号,请稍候</string>
    <string name="get_rfid_sn">获取卡信息</string>
    <string name="m1_card_test">M1卡测试</string>
    <string name="ul_card_test">Ultralight卡测试</string>
    <string name="card_sn">卡号:</string>
    <string name="ul_read_card">读卡</string>
    <string name="ul_write_card">写卡</string>
    <string name="read_succss">读卡成功</string>
    <string name="write_succss">写卡成功</string>
    <string name="cpucard_send_apdu_command">发送apdu指令</string>
    
    <!-- ID Card -->
    <string name="identity_test">身份证识别</string>
    <string name="bl_xsdxx">显示的信息</string>
    <string name="idcard_czz">操作中</string>
    <string name="idcard_ljdkq">连接读卡器...</string>
    <string name="idcard_ljdkqcg">连接读卡器成功</string>
    <string name="idcard_wfljdkq">无法连接读卡器</string>
    <string name="idcard_dqsbhcs">读取失败或超时</string>
    <string name="idcard_xm">姓名：</string>
    <string name="idcard_xb">性别：</string>
    <string name="idcard_mz">民族：</string>
    <string name="idcard_csrq">出生日期：</string>
    <string name="idcard_dz">地址：</string>
    <string name="idcard_sfhm">身份证号码：</string>
    <string name="idcard_qzjg">签发机关：</string>
    <string name="idcard_yxqx">"有效期限："</string>
    <string name="idcard_hqsfzxx">获取身份证信息</string>
    <string name="idcard_xzgn">选择功能</string>
    <string name="idcard_xzsfsbfs">请选择身份证识别方式</string>
    <string name="idcard_sxtsb">摄像头OCR识别</string>
    <string name="idcard_dkqsb">"二代证读卡器识别"</string>
	<string name="select_show_head_photo">是否显示头像</string>
    <string name="select_show_head_photo_true">是</string>
    <string name="select_show_head_photo_false">否</string>
    <string name="get_id_front_fail">获取身份证正面信息失败</string>
    <string name="get_id_front_success">获取身份证正面信息成功</string>
    <string name="get_id_back_fail">获取身份证反面信息失败</string>
    <string name="get_id_back_success">获取身份证反面信息成功</string>
    <string name="identify_fail">未安装API模块，无法进行二维码/身份证识别</string>
    <string name="none">无</string>
    <string name="idCard_front_info">身份证正面信息</string>
    <string name="idCard_back_info">身份证反面信息</string>
    <string name="idcard_zwxx">指纹信息：</string>
    <string name="idcard_ysmz">右手拇指</string>
    <string name="idcard_yssz">右手食指</string>
    <string name="idcard_yszz">右手中指</string>
    <string name="idcard_yshz">右手环指</string>
    <string name="idcard_ysxz">右手小指</string>
    <string name="idcard_zsmz">左手拇指</string>
    <string name="idcard_zssz">左手食指</string>
    <string name="idcard_zszz">左手中指</string>
    <string name="idcard_zshz">左手环指</string>
    <string name="idcard_zsxz">左手小指</string>
    <string name="idcard_ysbqdzw">右手不确定指位</string>
    <string name="idcard_zsbqdzw">左手不确定指位</string>
    <string name="idcard_qtbqdzw">其他不确定指位</string>
    <string name="idcard_zwwz">指位未知</string>
    <string name="idcard_zccg">注册成功</string>
    <string name="idcard_zcsb">注册失败</string>
    <string name="idcard_wzc">未注册</string>
    <string name="idcard_zcztwz">注册状态未知</string>
    <string name="idcard_zwzl">指纹质量=</string>
    <string name="idcard_wdqhbhzw">(指纹未读取或不含指纹)</string>
 
    
    <!-- IC/PSAM -->
    <string name="pcsc_test">IC卡测试</string>
    <string name="psam_test">PSAM测试</string>
    <string name="open_reader">打开读卡器</string>
    <string name="close_reader">关闭读卡器</string>
    <string name="verify">验证</string>
    <string name="modify">修改</string>    
    <string name="sle4442read_addr">读取地址(0~255):</string>
    <string name="sle4442read_numm">读取个数(1~256):</string>
    <string name="sle4442write_addr">写入地址(0~255):</string>     
    <string name="sle4428read_addr">读取地址(0~1023):</string>
    <string name="sle4428read_num">读取个数(0~1024):</string>
    <string name="sle4428write_addr">写入地址(0~1023):</string>
    <string name="content">内容:</string>
    <string name="PSC">密码</string>
    <string name="reader">读卡器:</string>
    <string name="get_ATR">获取ATR</string>
    <string name="get_PROTOCOL">获取 protocol</string>
    <string name="apdu_to_send">输入apdu</string>
    <string name="send_apdu">发送APDU</string>
    <string name="get_ATR_fail">获取ATR失败</string>
    <string name="get_ATR_success">获取ATR成功：</string>
    <string name="get_data_success">获取数据成功</string>
    <string name="get_protocol_success">获取协议成功</string>
    <string name="power_on">上电</string>
    <string name="power_off">下电</string>
    <string name="send_APDU_fail">发送APDU失败</string>
    <string name="send_APDU_success">发送APDU成功，返回：</string>
    <string name="send_comm_success">发送指令成功</string>
    <string name="ic_waring">术语解释：\nATR:复位应答指令\nprotocol：通信协议\n"A0A40000023F00":打开智能卡根目录指令\nAPDU:智能卡通讯指令</string>                           
        
    <!-- HDMI -->
    <string name="hdmi">HDMI双屏异显</string>
    <string name="hdmi_switch">切换到HDMI</string>
    <string name="hdmi_tv_notify">先打开设置中的双屏显示，然后才能用此方法切换</string>
    
    <!-- 钱箱 -->
    <string name="moneybox_test">钱箱测试</string>
    <string name="moneybox_open">打开钱箱</string>
    <string name="moneybox_toast_text_low_battery">电池电量低,请连接充电器</string>
      
    <!-- 红外 -->
    <string name="ir_test">红外测试</string>
    <string name="ir_tv_initializing">初始化中，请稍后...</string>  
    <string name="ir_tv_staff_stat">人员状态：　</string>
    <string name="ir_tv_close">靠近</string>
    <string name="ir_tv_leave">离开</string>
    
    <!-- Led -->
    <string name="led">LED测试</string>
    <string name="led_bt_green_open">打开绿灯</string>
    <string name="led_bt_green_close">关闭绿灯</string>
    <string name="led_bt_red_open">打开红灯</string>
    <string name="led_bt_red_close">关闭红灯</string>
    
    <!--激光二维码  -->
    <string name="decode">激光二维码测试</string>
    <string name="decode_read">读取数据</string>
    
    <!-- NFC -->
    <string name="nfc">NFC测试</string>
    <string name="nfc_tv_scanning">扫描中...</string>
      
</resources>
