<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f5f5f5"
    android:orientation="vertical" >

    <include layout="@layout/titlebar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="15dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/print_test"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/button_number_violet_shape"
                style="@style/buttonNumberStyle"
                android:text="@string/print_test"
                android:enabled="false" />

            <View
                android:layout_width="15dp"
                android:layout_height="fill_parent" >
            </View>

            <Button
                android:id="@+id/qrcode_verify"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                style="@style/buttonNumberStyle"
                android:background="@drawable/button_number_violet_shape"
                android:text="@string/qrcode_verify"
                android:enabled="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/magnetic_card_btn"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/button_number_violet_shape"

                style="@style/buttonNumberStyle"
                android:text="@string/magnetic_card_test"
                android:enabled="false" />

            <View
                android:layout_width="15dp"
                android:layout_height="fill_parent" >
            </View>

            <Button
                android:id="@+id/rfid_btn"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/button_number_violet_shape"
                style="@style/buttonNumberStyle"
                android:text="@string/rfid_test"
                android:enabled="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/identity_btn"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/button_number_violet_shape"
                style="@style/buttonNumberStyle"
                android:text="@string/identity_test"
                android:enabled="false" />

            <View
                android:layout_width="15dp"
                android:layout_height="fill_parent" >
            </View>

            <Button
                android:id="@+id/pcsc_btn"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/button_number_violet_shape"
                style="@style/buttonNumberStyle"
                android:text="@string/pcsc_test"
                android:enabled="false" /> 
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/nfc_btn"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/button_number_violet_shape"
                android:enabled="false"
                style="@style/buttonNumberStyle"
                android:text="@string/nfc" />

            <View
                android:layout_width="15dp"
                android:layout_height="fill_parent" >
            </View>

            <Button
                android:id="@+id/psam"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/button_number_violet_shape"
                style="@style/buttonNumberStyle"
                android:text="@string/psam_test"
                android:enabled="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/hdmi_btn"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/button_number_violet_shape"
                style="@style/buttonNumberStyle"
                android:text="@string/hdmi"
                android:enabled="false" />

            <View
                android:layout_width="15dp"
                android:layout_height="fill_parent" >
            </View>

            <Button
                android:id="@+id/moneybox_btn"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/button_number_violet_shape"
                style="@style/buttonNumberStyle"
                android:text="@string/moneybox_test"
                android:enabled="false" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/ir_btn"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/button_number_violet_shape"
                style="@style/buttonNumberStyle"
                android:text="@string/ir_test"
                android:enabled="false" />

            <View
                android:layout_width="15dp"
                android:layout_height="fill_parent" >
            </View>

            <Button
                android:id="@+id/led_btn"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/button_number_violet_shape"
                style="@style/buttonNumberStyle"
                android:text="@string/led"
                android:enabled="false" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/decode_btn"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/button_number_violet_shape"
                style="@style/buttonNumberStyle"
                android:text="@string/decode"
                android:enabled="false" />

        </LinearLayout>
        
    </LinearLayout>

</LinearLayout>