<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical" >

    <include layout="@layout/titlebar" />

    <Button
        android:id="@+id/open_moneybox"
        style="@style/buttonNumberStyle"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/button_number_violet_shape"
        android:text="@string/moneybox_open" />

    <LinearLayout
        android:id="@+id/hdmi_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" 
        android:visibility="gone">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/hdmi_tv_notify"
            android:textSize="20sp" />

        <Button
            android:id="@+id/hdmi"
            style="@style/buttonNumberStyle"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/button_number_violet_shape"
            android:text="@string/hdmi_switch" />
    </LinearLayout>

</LinearLayout>